Making sure FYP is up to date (3/3)

--- a/private/app/templates/adminforumnavbar.html.twig
+++ b/private/app/templates/adminforumnavbar.html.twig
@@ -2,21 +2,15 @@
 <ul>
     <li><a href="home">Website Homepage</a></li>
     <li><a href="forum">Forum Homepage</a></li>
-	<li><a href="">Post tools</a>
-	   <ul>
-	        <li><a href="cpost">Create a post</a></li>
-            <li><a href="dpost">Delete posts</a></li>
-	   </ul>
-	</li>
-	<li><a href="dreplies">Delete replies</a></li>
-	<li><a href="">Category tools</a>
-	    <ul>
-	        <li><a href="fcat">Create a category</a></li>
-            <li><a href="ecat">Edit a category</a></li>
-            <li><a href="dcat">Delete categories</a></li>
-	   </ul>
-	</li>
-	<li style="float:right"><a href="editdetails">Edit personal details</a></li>
+	<li><a href="ccat">Create category</a></li>
+	<li><a href="dcat">Delete category</a></li>
     <li style="float:right"><a href="logout">Logout</a></li>
+    <li style="float:right"><a href="">User Tools</a>
+        <ul>
+            <li><a href="userupdate">Edit personal details</a></li>
+            <li><a href="editrole">Edit User Role</a></li>
+            <li><a href="deleteusers">Delete Users</a></li>
+        </ul>
+    </li>
 </ul>
 </nav>
