--- a/private/app/templates/deleteuser.html.twig
+++ b/private/app/templates/deleteuser.html.twig
@@ -1,12 +1,13 @@
 {% extends 'banner.html.twig' %}
 {% block content %}
     <div id="page-content-div">
+        {% if users %}
         <form action="{{ action }}" method ="{{ method }}">
             <h3>{{ page_heading_2 }}</h3>
             <fieldset>
                 <p>{{ page_text }}</p>
 
-                <label for="sys">User:</label> <select id="sys">
+                <label for="user">User:</label> <select id="user" name="user">
                     {% for user in users %}
                         <option value="{{ user.userid }}">{{ user.userusername }}</option>
                     {% endfor %}
@@ -15,5 +16,10 @@
                 <input id="delete" type="submit" value="delete user">
             </fieldset>
         </form>
+        {% endif %}
+
+        {% if not users %}
+            <p>No users to delete!</p>
+        {% endif %}
     </div>
 {% endblock %}
