--- a/private/app/templates/forumbanner.html.twig
+++ b/private/app/templates/forumbanner.html.twig
@@ -6,7 +6,7 @@
 		{% if userrole == 1 %}
            {% include "adminforumnavbar.html.twig" %}
         {% else %}
-           {% include "adminforumnavbar.html.twig" %}
+           {% include "forumnavbar.html.twig" %}
 		{% endif %}
     </div>
     <div id="clear-div"></div>
