--- a/private/app/templates/navbar.html.twig
+++ b/private/app/templates/navbar.html.twig
@@ -6,12 +6,13 @@
                     <li><a href="explanation">What is it?</a></li>
                     <li><a href="systemtype">Types</a></li>
                     <li><a href="quizzes">Quizzes</a></li>
+                    <li><a href="vwords">Glossary</a></li>
                 </ul>
             </li>
             <li><a href="forum">Forums</a></li>
             <li><a href="about">About Us</a></li>
             <li><a href="furtherreading">Further Reading</a></li>
-            <li style="float:right"><a href="userupdate">Edit personal details</a></li>
             <li style="float:right"><a href="logout">Logout</a></li>
+            <li style="float:right"><a href="userupdate">Edit personal details</a></li>
         </ul>
     </nav>
