--- a/private/app/templates/quizzes.html.twig
+++ b/private/app/templates/quizzes.html.twig
@@ -1,17 +1,17 @@
-{% extends 'forumbanner.html.twig' %}
+{% extends 'banner.html.twig' %}
 {% block content %}
     <div class="cent">
       <h2>{{ page_heading_2 }}</h2>
         <div class="table">
             <div class="table-row">
-                <div class="reverse-l-table-head">Quiz Name</div>
-                <div class="reverse-r-table-head">Description</div>
+                <div class="reverse-l-table-head"><p class="heading">Quiz Name</p></div>
+                <div class="reverse-r-table-head"><p class="heading">Description</p></div>
             </div>
 
             {% if quiz %}
                 {% for individualquiz in quiz %}
                     <div class="table-row">
-                        <div class="reverse-l-table-cell"><a href="questions.php?id">. {{ individualquiz.quizid }}</a>{{ individualquiz.name }}</div>
+                        <div class="reverse-l-table-cell"><a href="quizlet?id={{ individualquiz.quizid }}">{{ individualquiz.quizname }}</a></div>
                         <div class="reverse-r-table-cell">{{ individualquiz.quizdescription }}</div>
                     </div>
                 {% endfor %}
