--- a/private/app/templates/register.html.twig
+++ b/private/app/templates/register.html.twig
@@ -19,7 +19,7 @@
                 <br>
                 <label for="username">Username: </label><input id="username" type="text" name="username" size="10" required>
                 <br>
-                <label for="email">Email address: </label><input id="email" type="text" name="email" size="10" required>
+                <label for="email">Email address: </label><input id="email" type="email" name="email" size="10" required>
                 <br>
                 <label for="password">Password: </label><input id="password" type="password" name="password" size="10" required>
                 <br>
