--- a/private/app/templates/createcat.html.twig
+++ b/private/app/templates/createcat.html.twig
@@ -7,9 +7,8 @@
             <p>{{ page_text }}</p>
 
             <label for="catname">Category Name:</label> <input id="catname" type="text" name="catname" size="10" required>
-            <br>
-            <label for="catdesc">Category Description:</label>
-            <textarea rows = "5" cols = "50" name = "catdesc" size="10" required></textarea>
+            <br><br>
+            <label for="catdesc">Category Description:</label> <textarea rows = "5" cols = "50" name = "catdesc" size="10" required></textarea>
             <hr>
             <input type="submit" value="send">
         </fieldset>
