--- a/private/app/templates/deletecategory.html.twig
+++ b/private/app/templates/deletecategory.html.twig
@@ -1,17 +1,23 @@
 {% extends 'forumbanner.html.twig' %}
 {% block content %}
     <div id="page-content-div">
+        {% if categories %}
         <form action="{{ action }}" method ="{{ method }}">
             <h3>{{ page_heading_2 }}</h3>
             <fieldset>
-                <label for="category">Category:</label> <select name="category">
+                <label for="categories">Categories:</label> <select name="categories">
                     {% for category in categories %}
-                        <option value="{{ category.categoryid }}">{{ category.categoryname }}</option>
+                        <option value="{{ category.categoryid }}">{{ category.categoryname}}</option>
                     {% endfor %}
                 </select>
                 <br>
                 <input type="submit" value="delete category">
             </fieldset>
         </form>
+        {% endif %}
+
+        {% if not categories %}
+          <p>No categories to delete!</p>
+        {% endif %}
     </div>
 {% endblock %}
