--- a/private/app/templates/deletetype.html.twig
+++ b/private/app/templates/deletetype.html.twig
@@ -1,17 +1,23 @@
 {% extends 'banner.html.twig' %}
 {% block content %}
     <div id="page-content-div">
+        {% if types %}
         <form action="{{ action }}" method ="{{ method }}">
             <h3>{{ page_heading_2 }}</h3>
             <fieldset>
-                <label for="systype">System Type:</label> <select id="systype">
+                <label for="systype">System Type:</label> <select id="systype" name="systype">
                     {% for type in types %}
-                        <option value="{{ type.systemtypename }}">{{ type.systemtypename }}</option>
+                        <option value="{{ type.systemtypeid }}">{{ type.systemtypename }}</option>
                     {% endfor %}
                 </select>
                 <br>
                 <input id="type" type="submit" value="delete type">
             </fieldset>
         </form>
+        {% endif %}
+
+        {% if not types %}
+          <p>No types to delete!</p>
+        {% endif %}
     </div>
 {% endblock %}
