--- a/private/app/templates/loginform.html.twig
+++ b/private/app/templates/loginform.html.twig
@@ -10,6 +10,8 @@
 </head>
 <body>
     <div id="page-content-div">
+        <p class="cent">{{ error_message }}</p>
+        <p class="cent">{{ message }}</p>
         <h2>{{ page_heading_2 }}</h2>
         <p class="cent">{{ page_text }}</p>
         <fieldset class="cent">
