--- a/private/app/templates/selectquestion.html.twig
+++ b/private/app/templates/selectquestion.html.twig
@@ -1,6 +1,7 @@
 {% extends 'banner.html.twig' %}
 {% block content %}
     <div id="page-content-div">
+        {% if questions %}
         <form action="{{ action }}" method ="{{ method }}">
             <h3>{{ page_heading_2 }}</h3>
             <fieldset>
@@ -15,5 +16,10 @@
                 <input type="submit" value="fetch question">
             </fieldset>
         </form>
+        {% endif %}
+
+        {% if not questions %}
+            <p>No questions in quiz!</p>
+        {% endif %}
     </div>
 {% endblock %}
