--- a/private/app/templates/selecttopic.html.twig
+++ b/private/app/templates/selecttopic.html.twig
@@ -1,6 +1,7 @@
 {% extends 'forumbanner.html.twig' %}
 {% block content %}
     <div id="page-content-div">
+        {% if posts %}
         <form action="{{ action }}" method ="{{ method }}">
             <h3>{{ page_heading_2 }}</h3>
             <fieldset>
@@ -15,5 +16,10 @@
                 <input id="system" type="submit" value="select topic">
             </fieldset>
         </form>
+        {% endif %}
+
+        {% if not posts %}
+          <p>No posts in category!</p>
+        {% endif %}
     </div>
 {% endblock %}
